public class Main {
    private static Game game = new Game();
    public static void main(String[] args) {
	// write your code here
        game.gameSetup();
        game.displayPlayers();

        //lav lidt om på en player
        //



    }



}
